[Misc] Add In-Container restart capability through supervisord for openai server #28502
Signed-off-by: Shen Teng <sheteng@amazon.com>

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -593,5 +593,5 @@ ENTRYPOINT ["./sagemaker-entrypoint.sh"]
 
 FROM vllm-openai-base AS vllm-openai
 
-ENTRYPOINT ["vllm", "serve"]
+ENTRYPOINT ["standard-supervisor", "vllm", "serve"]
 #################### OPENAI API SERVER ####################
