--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -159,3 +159,7 @@ mkdocs.yaml @hmellor
 /docs/usage/security.md @russellb
 /SECURITY.md @russellb
 /docs/contributing/vulnerability_management.md @russellb
+
+# gRPC server
+/vllm/grpc @CatherineSue @slin1237
+/vllm/entrypoints/grpc_server.py @CatherineSue @slin1237
