Add pyi in pyproject.toml
Signed-off-by: Chang Su <chang.s.su@oracle.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,6 +58,7 @@ include = ["vllm*"]
 # Exclude generated protobuf files
 "vllm/grpc/*_pb2.py" = ["ALL"]
 "vllm/grpc/*_pb2_grpc.py" = ["ALL"]
+"vllm/grpc/*_pb2.pyi" = ["ALL"]
 
 [tool.ruff.lint]
 select = [
