feat(docker): make standard-supervisor optional via entrypoint script
Add configurable entrypoint.sh that allows toggling standard-supervisor
usage via VLLM_USE_STANDARD_SUPERVISOR environment variable.

- Default: direct vllm serve execution (standard-supervisor disabled)
- Set VLLM_USE_STANDARD_SUPERVISOR=true to enable standard-supervisor

Signed-off-by: Shen Teng <sheteng@amazon.com>

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -593,5 +593,8 @@ ENTRYPOINT ["./sagemaker-entrypoint.sh"]
 
 FROM vllm-openai-base AS vllm-openai
 
-ENTRYPOINT ["standard-supervisor", "vllm", "serve"]
+COPY docker/entrypoint.sh .
+RUN chmod +x entrypoint.sh
+
+ENTRYPOINT ["./entrypoint.sh"]
 #################### OPENAI API SERVER ####################
