--- a/.buildkite/test-amd.yaml
+++ b/.buildkite/test-amd.yaml
@@ -401,7 +401,7 @@ steps:
 # TODO: Add the "V1 Test attetion (MI300)" test group
 
 - label: V1 Test attention (H100) # 10min
-  mirror_hardwares: [amdexperimental]
+  mirror_hardwares: [amdexperimental, amdmyvalidation]
   agent_pool: mi325_1
   # grade: Blocking
   timeout_in_minutes: 30
